--- a/frontend/src/components/session/signup_form.css
+++ b/frontend/src/components/session/signup_form.css
@@ -1,92 +1,94 @@
-html, body, header, nav, h1, a,
-ul, li, strong, main, button, i,
-section, img, div, h2, p, form,
-fieldset, label, input, textarea,
-span, article, footer, time, small {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font: inherit;
-  color: inherit;
-  text-align: inherit;
-  text-decoration: inherit;
-  vertical-align: inherit;
-  box-sizing: inherit;
-  background: transparent;
-}
-
 .signup-form-container {
-  background-color: #AAA0A0;
-  width: 100vw;
-  height: 100vh;
-  font-family: "Source Sans Pro",sans-serif;
-  display: flex;
-  justify-content: center;
-  background-size: auto;
+    width: 100vw;
+    height: 100vh;
+    /* font-family: "Source Sans Pro",sans-serif; */
+    display: flex;
+    justify-content: center;
+    background-size: auto;
 }
 
 .signup-form-body {
-  margin-top: 150px;
-  margin-bottom: 80px;
-  background-color: #86B3D1;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  box-sizing: border-box;
-  width: 400px;
-  height: 400px;
-  border-radius: 5px;
+    margin-top: 10%;
+    /* margin-bottom: 80px; */
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    box-sizing: border-box;
+    width: 400px;
+    height: 400px;
+    border-radius: 5px;
 }
 
 .signup-form-body h1 {
-  display: block;
-  box-sizing: border-box;
-  font-family: Futura,sans-serif;
-  font-size: 22px;
-  font-weight: 700;
-  letter-spacing: 0.1em;
-  padding-top: 20px;
+    font-size: 22px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #6f8ff6;
+    letter-spacing: 0.1em;
 }
 
 .signup-form-body p {
-  display: block;
-  margin-block-start: 1em;
+    display: block;
+    margin: 15px 0;
+    color: #7e6c5d;
+    /* margin-block-start: 1em;
   margin-block-end: 1em;
   margin-inline-start: 0px;
-  margin-inline-end: 0px;
+  margin-inline-end: 0px; */
 }
 
 .signup-form {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  box-sizing: border-box;
-  line-height: 1.65;
-  font-size: 16px;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    /* box-sizing: border-box; */
+    line-height: 1.65;
+    font-size: 16px;
+    align-items: center;
 }
 
 .signup-info {
-  display: block;
-  padding: 12px 14px;
-  border-radius: 5px;
-  border: 1px solid #cfcac2;
-  width: 380px;
-  background: transparent;
+    display: block;
+    padding: 12px 14px;
+    border-radius: 5px;
+    border: 1px solid #6f8ff6;
+    width: 100%;
+    background: transparent;
 }
 
 .signup-form-submit {
-  /* background-color: #86B3D1; */
-  background-color: #ffe198;
-  border-radius: 5px;
-  width: 100px;
-  text-align: center;
-  cursor: pointer;
+    border: 1px solid #6f8ff6;
+    background-color: #6f8ff6;
+    font-weight: 700;
+    letter-spacing: 0.1em;
+    color: white;
+    border-radius: 5px;
+    width: 100%;
+    padding: 12px 14px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.signup-form-submit:hover {
+    background-color: #0b2fa8;
+}
+
+.signup-lower-message {
+    padding: 12px 14px;
+    text-align: center;
+    margin: 10px 0;
+    width: 100%;
+    /* color: #aaa0a0; */
+    color: #6f8ff6;
+}
+
+.signup-login-link:hover {
+    color: #0b2fa8;
 }
 
 .signup-errors {
-  margin-top: 20px;
-  color: rebeccapurple;
-  /* font-weight: bold; */
+    margin-top: 20px;
+    color: rebeccapurple;
+    /* font-weight: bold; */
 }
