--- a/frontend/src/components/main/navbar.css
+++ b/frontend/src/components/main/navbar.css
@@ -1,8 +1,21 @@
 .nav-main {
     display: flex;
+    background-color: #eeebe3;
+    border-bottom: 1px solid rgb(111, 143, 246, 0.2);
     justify-content: space-between;
     align-items: center;
     font-weight: bold;
+    padding: 20px;
+}
+
+.nav-header {
+    font-size: 40px;
+    font-family: 'Bungee Shade', cursive;
+    background-color: #6f8ff6;
+    letter-spacing: 0.3em;
+    color: whitesmoke;
+    padding: 3px 7px;
+    border-radius: 4px;
 }
 
 .nav-comp-1 {
@@ -12,7 +25,7 @@
 }
 
 .nav-comp-1>a {
-    color: #ef3231;
+    color: #6f8ff6;
 }
 
 .nav-comp-2 {
@@ -22,14 +35,14 @@
 }
 
 .nav-comp-2>a {
-    color: #7e6c5d
+    color: #7e6c5d;
 }
 
 .nav-comp-2>.cart {
-    color: #ef3231;
+    color: #6f8ff6;
 }
 
 .nav-comp-2>.account:hover,
 .nav-comp-2>.search:hover {
-    color: #ef3231;
+    color: #6f8ff6;
 }
