Add extra css on splash page

--- a/frontend/src/components/main/splash_page.css
+++ b/frontend/src/components/main/splash_page.css
@@ -1,27 +1,24 @@
 .splash-body {
-  display: flex;
-  align-items: center;
-  width: 100vw;
+  display: block;
+  position: relative;
+  width: 100%;
   height: 100vh;
-  flex-grow: 1;
-  margin: 0 auto;
-  justify-content: center;
   background-image: url('../../images/block_on_keyboard.jpg');
-  /* background-image: url('../../images/Surprise_Gift.jpg'); */
-  /* background-image: url('../../images/west_side_market.jpeg'); */
-  /* background-image: url('../../images/shopping-cart-hand-drawn-shopping-items-shopping-cart-hand-drawn-shopping-items.jpg'); */
-  background-attachment: fixed;
   background-size: cover;
 }
 
 .splash-title {
-  /* font-family: "Source Sans Pro", sans-serif; */
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 55%;
   font-family: 'Bungee Inline', cursive;
   font-weight: bold;
   font-style: normal;
-  font-size: 100px;
+  font-size: 90px;
   letter-spacing: .02em;
-  /* color: antiquewhite; */
   color: #6f8ff6;
-  padding-top: 500px;
+  /* padding-bottom: 300px; */
+  padding-right: 50px;
+  flex-grow: unset;
 }
