--- a/frontend/src/components/products/product__index.css
+++ b/frontend/src/components/products/product__index.css
@@ -12,7 +12,7 @@
 
 .products-container {
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
@@ -49,20 +49,28 @@
 }
 
 .cart-btn {
+  color: white;
   text-align: center;
   margin: 10px;
   border: 1px solid #6f8ff6;
-  border-radius: 2px;
+  border-radius: 3px;
+  background-color: #6f8ff6;
 }
 
 .edit-btn{
   text-align: center;
   border: 1px solid #6f8ff6;
+  border-radius: 3px;
   width: 40%;
+  color: white;
+  background-color: #6f8ff6;
 }
 
 .delete-btn{
   text-align: center;
   border: 1px solid #6f8ff6;
+  border-radius: 3px;
   width: 40%;
+  color: white;
+  background-color: #6f8ff6;
 }
