--- a/frontend/src/components/products/product_show.css
+++ b/frontend/src/components/products/product_show.css
@@ -1,14 +1,80 @@
 .product-show-container {
   display: flex;
-  margin: 30px;
-  justify-content: space-evenly;
+  margin: 60px;
+  justify-content: space-around;
 }
 .product-show-info {
   margin: 20px;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .product-show-image {
-  width: 200px;
-  height: 200px;
+  width: 40%;
+  height: 500px;
   border: 1px solid black;
+}
+
+.product-show-details {
+  text-align: center;
+  padding: 20px;
+  margin: 20px;
+}
+
+.product-show-name {
+  font-size: 28px;
+  padding: 10px;
+  text-transform: capitalize;
+}
+
+.product-show-price {
+  font-size: 20px;
+  padding: 10px;
+}
+
+.product-show-description {
+  font-size: 16px;
+  padding: 10px;
+}
+
+.product-show-action-btns {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+  letter-spacing: 0.1em;
+  font-weight: 600;
+}
+
+.product-show-edit-btn {
+  width: 40%;
+  background-color: #6f8ff6;
+  color: white;
+  text-align: center;
+  padding: 12px 14px;
+  border-radius: 3px;
+}
+
+.product-show-delete-btn {
+  width: 40%;
+  background-color: #6f8ff6;
+  font-size: 16px;
+  text-align: center;
+  color: white;
+  padding: 12px 14px;
+  border-radius: 3px;
+}
+
+.product-cart-btn {
+  text-align: center;
+  padding: 10px;
+  margin: 10px;
+  line-height: 2;
+  background-color: #6f8ff6;
+  color: white;
+  text-transform: uppercase;
+  border-radius: 3px;
+  letter-spacing: 0.1em;
+  font-weight: 600;
 }
