Complete search css

--- a/frontend/src/components/main/navbar.css
+++ b/frontend/src/components/main/navbar.css
@@ -23,20 +23,23 @@
 .nav-comp-1 {
   display: flex;
   flex-wrap: wrap;
-  width: 20%;
-  justify-content: space-between;
+  width: 35%;
+  justify-content: left;
 }
 
 .nav-comp-1>a {
   color: #6f8ff6;
+  padding-left: 30px;
+  padding-right: 50px;
 }
 
 .nav-comp-2 {
   display: flex;
   flex-wrap: wrap;
-  width: 30%;
+  width: 33%;
   justify-content: space-between;
   align-items: center;
+  padding-right: 30px;
 }
 
 .nav-comp-2>a {
