--- a/frontend/src/components/main/profile.css
+++ b/frontend/src/components/main/profile.css
@@ -65,9 +65,17 @@
 .orders-list li {
     display: flex;
     margin-bottom: 20px;
+    max-height: 100px;
+    background: transparent;
 }
 
 .order-tag-icon {
     margin-right: 10px;
     color: #7e6c5d;
+}
+
+.order-list-image {
+    width: 50px;
+    margin-right: 30px;
+    background: transparent;
 }
