--- a/frontend/src/components/cart/cart.css
+++ b/frontend/src/components/cart/cart.css
@@ -56,11 +56,18 @@
 
 .item-info-action {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
 }
 
 .item-info-description {
   width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+  color: #7e6c5d;
+  font-weight: 600;
 }
 
 /* .cart-remove-btn-container {
