--- a/frontend/src/components/products/product_show.css
+++ b/frontend/src/components/products/product_show.css
@@ -12,14 +12,27 @@
 }
 
 .product-show-image {
-  width: 40%;
-  height: 500px;
-  border: 1px solid black;
+  display: flex;
+  flex-wrap: wrap;
+  width: 60%;
+  height: 700px;
+  justify-content: center;
+  align-content: center;
+  /* border: 1px solid black; */
 }
 
 .product-show-pix-indiv {
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 300px;
+  border: 1px solid #6f8ff6;
+  /* border: 1px solid #e6e3dc; */
+  border-radius: 8px;
+  margin: 10px;
+}
+.product-show-pix-indiv:hover {
+  -webkit-transform: scale(2);
+  -ms-transform: scale(2);
+  transform: scale(2);
 }
 
 .product-show-details {
@@ -82,4 +95,6 @@
   border-radius: 3px;
   letter-spacing: 0.1em;
   font-weight: 600;
+  width: 300px;
+  align-self: center;
 }
