--- a/frontend/src/components/cart/cart.css
+++ b/frontend/src/components/cart/cart.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 20px;
 }
 
 .items {
@@ -19,7 +20,6 @@
 
 .list-items li {
   padding: 0 15px;
-  border-bottom: 1px solid #6f8ff6;
   counter-increment: my-counter;
   display: flex;
   align-items: center;
@@ -41,8 +41,17 @@
   justify-content: space-around;
 } */
 
+.cart-header {
+  font-size: 2em;
+  font-weight: 600;
+  padding: 20px;
+  margin: 20px;
+  text-transform: capitalize;
+  color: #6f8ff6;
+}
+
 .cart-image-container{
-  height: 100px;
+  height: 200px;
   padding: 10px;
   display: flex;
   justify-content: center;
@@ -81,12 +90,14 @@
   color: white;
   margin-top: 15px;
   font-weight: 600;
-  text-transform: capitalize;
+  text-transform: uppercase;
+  width: 100%;
+  text-align: center;
+  font-size: 10px;
 }
 
 .cart-purchase-btn {
   text-align: center;
-  padding: 10px;
   margin: 10px;
   line-height: 2;
   background-color: #6f8ff6;
@@ -95,4 +106,36 @@
   border-radius: 3px;
   letter-spacing: 0.1em;
   font-weight: 600;
+  width: 220px;
+}
+
+.item-name {
+  font-size: 25px;
+}
+
+.item-price {
+  font-size: 20px;
+}
+
+.item-description {
+  font-size: 15px;
+}
+
+.items-purchase-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.items-total {
+  text-align: right;
+  font-size: 20px;
+  font-weight: 600;
+  color: #7e6c5d;
+  padding: 10px;
+  margin: 10px;
+  text-transform: capitalize;
+}
+
+.purchase-btn-container {
+  text-align: right;
 }
