--- a/frontend/src/components/cart/cart.css
+++ b/frontend/src/components/cart/cart.css
@@ -85,7 +85,7 @@
 
 .cart-remove-btn {
   background-color: #6f8ff6;
-  padding: 10px;
+  padding: 5px;
   border-radius: 3px;
   color: white;
   margin-top: 15px;
@@ -93,7 +93,15 @@
   text-transform: uppercase;
   width: 100%;
   text-align: center;
-  font-size: 10px;
+  font-size: 8px;
+  letter-spacing: 0.1em;
+}
+
+.cart-remove-btn:hover {
+  background-color: #0b2fa8;
+}
+.cart-purchase-btn:hover {
+  background-color: #0b2fa8;
 }
 
 .cart-purchase-btn {
@@ -115,8 +123,11 @@
 
 .item-price {
   font-size: 20px;
+  color: black;
 }
-
+.dollar-amount {
+  color: black;
+}
 .item-description {
   font-size: 15px;
 }
