--- a/frontend/src/components/cart/cart.css
+++ b/frontend/src/components/cart/cart.css
@@ -1,36 +1,37 @@
 .items-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
 }
 
 .items {
-  width: 80%;
-  border-top: 3px solid #6f8ff6;
+    width: 80%;
+    border-top: 3px solid #6f8ff6;
 }
 
 .list-items {
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  counter-reset: my-counter;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    counter-reset: my-counter;
 }
 
 .list-items li {
-  padding: 0 15px;
-  counter-increment: my-counter;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+    padding: 0 15px;
+    counter-increment: my-counter;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.list-items li > * {
-  flex-grow: 1;
-  flex-basis: 0px;
-  flex-shrink: 1;
+.list-items li>* {
+    flex-grow: 1;
+    flex-basis: 0px;
+    flex-shrink: 1;
 }
+
 
 /* .list-items li:before {
   content: counter(my-counter);
@@ -42,111 +43,133 @@
 } */
 
 .cart-header {
-  font-size: 2em;
-  font-weight: 600;
-  padding: 20px;
-  margin: 20px;
-  text-transform: capitalize;
-  color: #6f8ff6;
+    font-size: 2em;
+    font-weight: 600;
+    padding: 20px;
+    margin: 20px;
+    text-transform: capitalize;
+    color: #6f8ff6;
 }
 
-.cart-image-container{
-  height: 200px;
-  padding: 10px;
-  display: flex;
-  justify-content: center;
+.cart-image-container {
+    height: 300px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
 }
 
 .cart-image {
-  border: 1px solid #6f8ff6;
-  height: 100%;
-  width: 50%;
+    border: 1px solid #6f8ff6;
+    height: 100%;
+    width: 50%;
 }
 
 .item-info-action {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .item-info-description {
-  width: 70%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 10px;
-  color: #7e6c5d;
-  font-weight: 600;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+    color: #7e6c5d;
+    font-weight: 600;
+    text-align: center;
 }
+
 
 /* .cart-remove-btn-container {
   display: flex;
 } */
 
 .cart-remove-btn {
-  background-color: #6f8ff6;
-  padding: 5px;
-  border-radius: 3px;
-  color: white;
-  margin-top: 15px;
-  font-weight: 600;
-  text-transform: uppercase;
-  width: 100%;
-  text-align: center;
-  font-size: 8px;
-  letter-spacing: 0.1em;
+    background-color: #6f8ff6;
+    padding: 5px;
+    border-radius: 3px;
+    color: white;
+    margin-top: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+    width: 100%;
+    text-align: center;
+    font-size: 8px;
+    letter-spacing: 0.1em;
 }
 
 .cart-remove-btn:hover {
-  background-color: #0b2fa8;
+    background-color: #0b2fa8;
 }
+
 .cart-purchase-btn:hover {
-  background-color: #0b2fa8;
+    background-color: #0b2fa8;
 }
 
 .cart-purchase-btn {
-  text-align: center;
-  margin: 10px;
-  line-height: 2;
-  background-color: #6f8ff6;
-  color: white;
-  text-transform: uppercase;
-  border-radius: 3px;
-  letter-spacing: 0.1em;
-  font-weight: 600;
-  width: 220px;
+    text-align: center;
+    margin: 10px;
+    line-height: 2;
+    background-color: #6f8ff6;
+    color: white;
+    text-transform: uppercase;
+    border-radius: 3px;
+    letter-spacing: 0.1em;
+    font-weight: 600;
+    width: 220px;
 }
 
 .item-name {
-  font-size: 25px;
+    font-size: 25px;
 }
 
 .item-price {
-  font-size: 20px;
-  color: black;
+    font-size: 20px;
+    color: black;
 }
+
 .dollar-amount {
-  color: black;
+    color: black;
 }
+
 .item-description {
-  font-size: 15px;
+    font-size: 15px;
 }
 
 .items-purchase-container {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .items-total {
-  text-align: right;
-  font-size: 20px;
-  font-weight: 600;
-  color: #7e6c5d;
-  padding: 10px;
-  margin: 10px;
-  text-transform: capitalize;
+    text-align: right;
+    font-size: 20px;
+    font-weight: 600;
+    color: #7e6c5d;
+    padding: 10px;
+    margin: 10px;
+    text-transform: capitalize;
 }
 
 .purchase-btn-container {
-  text-align: right;
+    text-align: right;
+}
+
+.continue-shopping {
+    text-align: center;
+    margin: 10px;
+    line-height: 2;
+    background-color: #6f8ff6;
+    color: white;
+    text-transform: uppercase;
+    border-radius: 3px;
+    letter-spacing: 0.1em;
+    font-weight: 600;
+    width: 220px;
+}
+
+.continue-shopping:hover {
+    background-color: #0b2fa8;
 }
