--- a/frontend/src/components/products/product_show.css
+++ b/frontend/src/components/products/product_show.css
@@ -1,6 +1,6 @@
 .product-show-container {
   display: flex;
-  margin: 60px;
+  margin: 200px 60px;
   justify-content: space-around;
 }
 .product-show-info {
