--- a/frontend/src/components/cart/cart.css
+++ b/frontend/src/components/cart/cart.css
@@ -60,8 +60,8 @@
 
 .cart-image {
     border: 1px solid #6f8ff6;
-    height: 100%;
-    width: 50%;
+    height: 300px;
+    width: 300px;
 }
 
 .item-info-action {
