--- a/frontend/public/reset.css
+++ b/frontend/public/reset.css
@@ -41,7 +41,8 @@ small {
 }
 
 body {
-    background-color: rgba(14, 32, 57, 0.7);
+    /* background-color: rgba(14, 32, 57, 0.7); */
+    background-color: white;
     
 }
 
