Make splash title responsive

--- a/frontend/src/components/main/splash_page.css
+++ b/frontend/src/components/main/splash_page.css
@@ -15,7 +15,8 @@
   font-family: 'Bungee Inline', cursive;
   font-weight: bold;
   font-style: normal;
-  font-size: 90px;
+  /* font-size: 90px; */
+  font-size: 6vw;
   letter-spacing: .02em;
   color: #6f8ff6;
   /* padding-bottom: 300px; */
