color change on buttons

--- a/frontend/src/components/products/product__index.css
+++ b/frontend/src/components/products/product__index.css
@@ -63,9 +63,9 @@
   color: white;
   text-align: center;
   margin-bottom: 10px;
-  border: 1px solid #ded09c;
+  border: 1px solid #1b2b42;
   border-radius: 3px;
-  background-color: #ded09c;
+  background-color: #1b2b42;
   padding: 7px;
   letter-spacing: 0.05em;
   text-transform: uppercase;
