--- a/frontend/src/components/products/product__index.css
+++ b/frontend/src/components/products/product__index.css
@@ -37,11 +37,13 @@
   border: 1px solid #1b2b42;
   width: 300px;
   height: 300px;
+  object-fit: contain;
 }
 
 .product-img img {
   width: 100%;
   height: 100%;
+  object-fit: contain;
 }
 
 .product-description {
