Edit cart and category css

--- a/frontend/src/components/products/product__index.css
+++ b/frontend/src/components/products/product__index.css
@@ -2,18 +2,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 100px;
 }
 
 .products-body-header {
   font-size: 24px;
   padding: 20px;
   margin: 20px;
-  color: #6f8ff6;
+  color: #1b2b42;
 }
 
 .products-container {
   display: flex;
-  /* flex-direction: row; */
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
@@ -34,7 +34,8 @@
 }
 
 .product-img {
-  border: 1px solid #1b2b42;
+  /* border: 1px solid #1b2b42; */
+  object-fit: contain;
   width: 300px;
   height: 300px;
 }
@@ -42,6 +43,7 @@
 .product-img img {
   width: 100%;
   height: 100%;
+  object-fit: contain;
 }
 
 .product-description {
