--- a/frontend/src/components/cart/cart.css
+++ b/frontend/src/components/cart/cart.css
@@ -3,11 +3,11 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    margin-top: 100px;
 }
 
 .items {
     width: 80%;
-    border-top: 3px solid #6f8ff6;
 }
 
 .list-items {
@@ -48,7 +48,6 @@
     padding: 20px;
     margin: 20px;
     text-transform: capitalize;
-    color: #6f8ff6;
 }
 
 .cart-image-container {
@@ -59,9 +58,9 @@
 }
 
 .cart-image {
-    border: 1px solid #6f8ff6;
     height: 300px;
     width: 300px;
+    object-fit: contain;
 }
 
 .item-info-action {
@@ -76,7 +75,6 @@
     flex-direction: column;
     align-items: center;
     margin-top: 10px;
-    color: #7e6c5d;
     font-weight: 600;
     text-align: center;
 }
@@ -87,7 +85,7 @@
 } */
 
 .cart-remove-btn {
-    background-color: #6f8ff6;
+    background-color: #1b2b42;
     padding: 5px;
     border-radius: 3px;
     color: white;
@@ -112,7 +110,7 @@
     text-align: center;
     margin: 10px;
     line-height: 2;
-    background-color: #6f8ff6;
+    background-color: #1b2b42;
     color: white;
     text-transform: uppercase;
     border-radius: 3px;
@@ -147,7 +145,6 @@
     text-align: right;
     font-size: 20px;
     font-weight: 600;
-    color: #7e6c5d;
     padding: 10px;
     margin: 10px;
     text-transform: capitalize;
@@ -161,7 +158,7 @@
     text-align: center;
     margin: 10px;
     line-height: 2;
-    background-color: #6f8ff6;
+    background-color: #1b2b42;
     color: white;
     text-transform: uppercase;
     border-radius: 3px;
