Update product show css

--- a/frontend/src/components/products/product_show.css
+++ b/frontend/src/components/products/product_show.css
@@ -18,14 +18,12 @@
   height: 40%;
   justify-content: center;
   align-content: center;
-  /* border: 1px solid black; */
+  object-fit: contain;
 }
 
 .product-show-pix-indiv {
   width: 300px;
   height: 300px;
-  border: 1px solid #6f8ff6;
-  /* border: 1px solid #e6e3dc; */
   border-radius: 8px;
   margin: 10px;
 }
@@ -67,7 +65,7 @@
 
 .product-show-edit-btn {
   width: 40%;
-  background-color: #6f8ff6;
+  background-color: #1b2b42;
   color: white;
   text-align: center;
   padding: 12px 14px;
@@ -76,7 +74,7 @@
 
 .product-show-delete-btn {
   width: 40%;
-  background-color: #6f8ff6;
+  background-color: #1b2b42;
   font-size: 16px;
   text-align: center;
   color: white;
@@ -89,7 +87,7 @@
   padding: 10px;
   margin: 10px;
   line-height: 2;
-  background-color: #6f8ff6;
+  background-color: #1b2b42;
   color: white;
   text-transform: uppercase;
   border-radius: 3px;
