--- a/frontend/src/components/main/creators.css
+++ b/frontend/src/components/main/creators.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #eeebe3;
     padding-bottom: 20%;
     padding-top: 100px;
 }
@@ -25,7 +24,7 @@
 }
 
 .link-name {
-    color: #ed851e;
+    color: orange;
     font-size: 20px;
     font-weight: 400;
     margin-right: 10px;
