--- a/frontend/src/components/session/login_form.css
+++ b/frontend/src/components/session/login_form.css
@@ -24,20 +24,19 @@
     font-size: 22px;
     font-weight: 700;
     text-transform: uppercase;
-    color: #6f8ff6;
+    color: #1b2b42;
     letter-spacing: 0.1em;
     margin-bottom: 10px;
 }
 
 .login-form-message {
-    color: #7e6c5d;
     padding-bottom: 10px;
 }
 
 .login-form-input {
     width: 100%;
     padding: 12px 14px;
-    border: 1px solid #6f8ff6;
+    border: 1px solid #1b2b42;
     line-height: 1.65;
     border-radius: 5px;
     margin-top: 30px;
@@ -48,8 +47,8 @@
 .login-form-submit {
     width: 100%;
     padding: 12px 14px;
-    border: 1px solid #6f8ff6;
-    background-color: #6f8ff6;
+    border: 1px solid #1b2b42;
+    background-color: #1b2b42;
     border-radius: 5px;
     text-align: center;
     margin-top: 30px;
@@ -68,8 +67,8 @@
 .demo-btn {
     width: 100%;
     padding: 12px 14px;
-    border: 1px solid #6f8ff6;
-    background-color: #6f8ff6;
+    border: 1px solid #1b2b42;
+    background-color: #1b2b42;
     border-radius: 5px;
     text-align: center;
     margin-top: 30px;
@@ -90,8 +89,7 @@
     text-align: center;
     margin: 10px 0;
     width: 100%;
-    /* color: #aaa0a0; */
-    color: #6f8ff6;
+    color: #1b2b42;
 }
 
 .create-one:hover {
