--- a/frontend/src/components/products/product_show.css
+++ b/frontend/src/components/products/product_show.css
@@ -72,6 +72,10 @@
   border-radius: 3px;
 }
 
+.product-show-edit-btn:hover {
+  background-color: #0b2fa8;
+}
+
 .product-show-delete-btn {
   width: 40%;
   background-color: #1b2b42;
@@ -80,6 +84,10 @@
   color: white;
   padding: 12px 14px;
   border-radius: 3px;
+}
+
+.product-show-delete-btn:hover {
+  background-color: #0b2fa8;
 }
 
 .product-cart-btn {
@@ -95,4 +103,8 @@
   font-weight: 600;
   width: 300px;
   align-self: center;
+}
+
+.product-cart-btn:hover {
+  background-color: #0b2fa8;
 }
