--- a/frontend/src/components/products/product_show.css
+++ b/frontend/src/components/products/product_show.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
 }
 
 .product-show-image {
@@ -99,6 +100,22 @@
   align-self: center;
 }
 
+.review-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 textarea {
   border: 1px solid black;
+}
+
+.submit-review {
+  border: 1px solid black;
+  padding: 5px 7px;
+  border-radius: 10px;
+}
+
+.product-reviews-list {
+  font-size: 20px;
 }
