--- a/frontend/src/components/main/navbar.css
+++ b/frontend/src/components/main/navbar.css
@@ -1,116 +1,124 @@
 .nav-main {
-  display: flex;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  flex-grow: 1;
-  background-color: #1b2b42;
-  border-bottom: 1px solid rgb(111, 143, 246, 0.2);
-  justify-content: space-between;
-  align-items: center;
-  font-weight: bold;
-  padding: 20px;
-  z-index: 1;
+    display: flex;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    flex-grow: 1;
+    background-color: #1b2b42;
+    border-bottom: 1px solid rgb(111, 143, 246, 0.2);
+    justify-content: space-between;
+    align-items: center;
+    font-weight: bold;
+    padding: 20px;
+    z-index: 1;
 }
+
+
 /* rgb(27, 43, 66, 0.3) */
+
 .nav-header {
-  font-size: 40px;
-  font-family: 'Bungee Shade', cursive;
-  /* background-color: #6f8ff6; */
-  letter-spacing: 0.3em;
-  color: white;
-  padding: 3px 7px;
-  border-radius: 4px;
+    font-size: 40px;
+    font-family: 'Bungee Shade', cursive;
+    /* background-color: #6f8ff6; */
+    letter-spacing: 0.3em;
+    color: white;
+    padding: 3px 7px;
+    border-radius: 4px;
 }
 
 .nav-comp-1 {
-  display: flex;
-  flex-wrap: wrap;
-  width: 35%;
-  justify-content: space-around;
+    display: flex;
+    flex-wrap: wrap;
+    width: 35%;
+    justify-content: space-around;
 }
 
 .nav-comp-1>a {
-  color: orange;
-  padding-left: 30px;
-  padding-right: 50px;
+    color: orange;
+    padding-left: 30px;
+    padding-right: 50px;
 }
 
 .nav-comp-2 {
-  display: flex;
-  flex-wrap: wrap;
-  width: 33%;
-  justify-content: space-between;
-  align-items: center;
-  padding-right: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 33%;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 30px;
 }
 
 .nav-comp-2>a {
-  color: orange;
+    color: orange;
 }
 
 .nav-comp-2>.cart {
-  color: orange;
+    color: orange;
 }
 
 .search {
-  text-align: left;
-  display: flex;
-  width: 175px;
-  border: 1px solid orange;
-  border-radius: 5px;
-  height: 30px;
-  padding: 2px 15px 2px 5px;
-  outline: 0;
-  margin-left: 30px;
-  font-size: small;
-  background-color: #f2f2f2;
+    text-align: left;
+    display: flex;
+    width: 175px;
+    border: 1px solid orange;
+    border-radius: 5px;
+    height: 30px;
+    padding: 2px 15px 2px 5px;
+    outline: 0;
+    margin-left: 30px;
+    font-size: small;
+    background-color: #f2f2f2;
 }
 
 .fa-search {
-  color: #6f8ff6;
-  margin-right: 0;
-  padding-top: 5px;
-  font-size: medium;
+    color: #6f8ff6;
+    margin-right: 0;
+    padding-top: 5px;
+    font-size: medium;
 }
 
 .nav-comp-2>.account {
-  padding-right: 15px;
+    padding-right: 15px;
 }
 
 .nav-comp-2>.account:hover,
 .nav-comp-2>.search:hover {
-  color: #6f8ff6;
+    color: #6f8ff6;
 }
 
 .dropdown {
-  position: relative;
-  cursor: pointer;
-  color: orange;
-  text-transform: uppercase;
+    position: relative;
+    cursor: pointer;
+    color: orange;
+    text-transform: uppercase;
 }
 
 .dropdown-content {
-  position: absolute;
-  margin-top: 39px;
-  border-top: 3px solid;
-  border-right: 1px solid;
-  border-bottom: 1px solid;
-  border-left: 1px solid;
-  width: 200px;
-  background-color: #eeebe3;
-  font-weight: 100;
+    position: absolute;
+    margin-top: 39px;
+    border-top: 3px solid;
+    border-right: 1px solid;
+    border-bottom: 1px solid;
+    border-left: 1px solid;
+    width: 200px;
+    background-color: #eeebe3;
+    font-weight: 100;
 }
 
 .dropdown-list {
-  line-height: 3;
-  padding: 10px;
+    line-height: 3;
+    padding: 10px;
 }
 
 .dropdown-list li {
-  padding-left: 30px;
+    padding-left: 30px;
 }
 
 .dropdown-list li:hover {
-  color: #0b2fa8;
+    color: #0b2fa8;
+}
+
+.nav-home:hover,
+.creators:hover, .cart:hover {
+    color: #6f8ff6;
 }
