--- a/frontend/src/components/session/login_form.css
+++ b/frontend/src/components/session/login_form.css
@@ -40,7 +40,7 @@
     line-height: 1.65;
     border-radius: 5px;
     margin-top: 30px;
-    color: #aaa0a0;
+    color: #1b2b42;
     box-sizing: border-box;
 }
 
