CSS search button

--- a/frontend/src/components/search/search.css
+++ b/frontend/src/components/search/search.css
@@ -22,8 +22,9 @@
 }
 
 .back-to-home-link {
-  color: #7e6c5d;
-  border: 1px solid #6f8ff6;
+  color: white;
+  border: 1px solid #1b2b42;
   padding: 5px;
   border-radius: 5px;
+  background-color: #1b2b42;
 }
